--- a/src/app/producto/producto.component.html
+++ b/src/app/producto/producto.component.html
@@ -1,3 +1,3 @@
-<div class="container"> 
-    <p>Descripción: {{ descripcion }}, Precio: S/. {{ precio }}</p> 
-</div>
+<li class="list-group-item text-center">
+    Descripción: {{ producto.descripcion }}, Precio: S/. {{ producto.precio }}
+</li>
