--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -2,16 +2,15 @@
 
 <form
     class="d-flex justify-content-between align-items-center my-4 w-50 mx-auto"
-    (submit)="agregarProducto($event)"
 >
     <input type="text" id="descripcion" name="descripcion"
         placeholder="Descripción Producto" class="form-control me-2 w-75"
         autocomplete="off"
-        #descripcionInput />
+        [(ngModel)]="descripcionInput" />
 
     <input type="number" id="precio" name="precio"
         placeholder="Precio" class="form-control me-2 w-25"
-        #precioInput />
+        [(ngModel)]="precioInput" />
 
-    <button type="submit" class="btn btn-primary">Agregar</button>
+    <button type="submit" class="btn btn-primary" (click)="agregarProducto()">Agregar</button>
 </form>
