--- a/src/app/listado-productos/listado-productos.component.html
+++ b/src/app/listado-productos/listado-productos.component.html
@@ -1,5 +1,8 @@
 <div class="container mt-3">
     <h3 class="text-warning">Listado de Productos</h3>
+    <div>
+        <button class="btn btn-primary" (click)="agregarProducto()">Agregar Producto</button>
+    </div>
     <ul class="list-group w-50 mx-auto">
         @for (productoElemento of productos; track productoElemento) {
             <app-producto [producto]="productoElemento" />
@@ -7,6 +10,4 @@
             <li class="list-group-item text-center">No hay productos.</li>
         }
     </ul>
-
-    <app-formulario />
 </div>
