--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,16 +1,29 @@
 <h5 class="text-success mt-3">Agregar Nuevo Producto</h5>
 
 <form
-    class="d-flex justify-content-between align-items-center my-4 w-50 mx-auto"
+    #f="ngForm" (ngSubmit)="f.form.valid && guardarProducto($event)"
+    class="my-4 w-50 x-auto"
 >
-    <input type="text" id="descripcion" name="descripcion"
-        placeholder="Descripción Producto" class="form-control me-2 w-75"
-        autocomplete="off"
-        [(ngModel)]="descripcionInput" />
+    <div class="d-flex justify-content-between align-items-center">
+        <input type="text" id="descripcion" name="descripcion"
+            placeholder="Descripción Producto" class="form-control me-2 w-75"
+            autocomplete="off"
+            [(ngModel)]="descripcionInput" />
 
-    <input type="number" id="precio" name="precio"
-        placeholder="Precio" class="form-control me-2 w-25"
-        [(ngModel)]="precioInput" />
+        <input type="number" id="precio" name="precio"
+            placeholder="Precio" class="form-control me-2 w-25"
+            [(ngModel)]="precioInput" />
+    </div>
 
-    <button type="submit" class="btn btn-primary" (click)="agregarProducto()">Agregar</button>
+    <div class="d-flex justify-content-center mt-1">
+        <button type="submit" class="btn btn-primary">Agregar</button>
+
+        @if (productoId !== null) {
+            <button type="button" class="btn btn-danger mx-auto" (click)="eliminarProducto()">
+                Eliminar Producto
+            </button>
+        }
+
+        <button type="button" class="btn btn-warning mx-3" (click)="cancelar()">Cancelar</button>
+    </div>
 </form>
