feat: Firebase RealTime Database

--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -18,7 +18,7 @@
     <div class="d-flex justify-content-center mt-1">
         <button type="submit" class="btn btn-primary">Agregar</button>
 
-        @if (productoId !== null) {
+        @if (llaveProducto !== null) {
             <button type="button" class="btn btn-danger mx-auto" (click)="eliminarProducto()">
                 Eliminar Producto
             </button>
