--- a/src/app/listado-productos/listado-productos.component.html
+++ b/src/app/listado-productos/listado-productos.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-3">
     <h3 class="text-warning">Listado de Productos</h3>
     <div>
-        <button class="btn btn-primary" (click)="agregarProducto()">Agregar Producto</button>
+        <button class="btn btn-primary my-3" (click)="agregarProducto()">Agregar Producto</button>
     </div>
     <ul class="list-group w-50 mx-auto">
-        @for (productoElemento of productos; track productoElemento) {
-            <app-producto [producto]="productoElemento" />
+        @for (llave of obtenerLlaves(); track llave) {
+            <app-producto [producto]="productos[llave]" [llave]="llave" />
         } @empty {
             <li class="list-group-item text-center">No hay productos.</li>
         }
