--- a/src/app/producto/producto.component.html
+++ b/src/app/producto/producto.component.html
@@ -1,6 +1,6 @@
 <li class="list-group-item text-center">
     Descripción: {{ producto.descripcion }}, Precio: S/. {{ producto.precio }}
-    <button type="button" class="btn btn-info ms-4" (click)="editarProducto(producto.id!)">
+    <button type="button" class="btn btn-info ms-4" (click)="editarProducto()">
         Editar Producto
     </button>
 </li>
